[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scenes/VisualNovel/ChoiceBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Stages/Stage.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/VisualNovel/Dialog.tscn" type="PackedScene" id=3]

[node name="Stage" type="Node2D"]
script = ExtResource( 2 )

[node name="Setting" type="Node2D" parent="."]

[node name="Actors" type="Node2D" parent="."]

[node name="Weather" type="Node2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="ChoiceBox" parent="." instance=ExtResource( 1 )]

[node name="Dialog" parent="." instance=ExtResource( 3 )]

[connection signal="save_choice" from="ChoiceBox" to="." method="_on_ChoiceBox_save_choice"]
